--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root{
+  --link-color: #3700ff
+}
+
 nav{
   display: flex;
   justify-content: space-between;
@@ -14,7 +18,7 @@ nav{
   align-items: center;
 }
 
-#login>*{
+#nav-login-form>*{
   margin: 0.2em;
 }
 
@@ -23,10 +27,40 @@ nav{
 }
 
 #login-button{
-  width: max-content;
+  color: white;
+  background-color: var(--link-color);
+  border: 1px solid gray;
+  border-radius: 0.3em;
+  height: 2em;
 }
 
 a{
   text-decoration: none;
-  color: rgb(55, 0, 255)
+  color: var(--link-color)
+}
+
+#nav-login-link{
+  color: white;
+  background-color: var(--link-color);
+  border: 1px solid gray;
+  border-radius: 0.3em;
+  height: 1.8em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1px 6px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+@media (min-width:900px){
+
+  #nav-login-link{
+    display: none;
+  }
+}
+
+@media (max-width:900px){
+  #nav-login-form, #nav-new-user{
+    display: none;
+  }
 }
