--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ a{
   }
 }
 
-#content{
+#home{
   display: grid;
   grid-template-columns: 150px 1fr;
 }
@@ -76,3 +76,4 @@ a{
   min-height: 100vh;
   box-sizing: border-box;
 }
+
