--- a/src/index.css
+++ b/src/index.css
@@ -27,12 +27,13 @@ nav{
   width: 90px;
 }
 
-#login-button{
+#login-button, #register-user{
   color: white;
   background-color: var(--link-color);
   border: 1px solid gray;
   border-radius: 0.3em;
   height: 2em;
+  width: max-content
 }
 
 a{
@@ -77,3 +78,22 @@ a{
   box-sizing: border-box;
 }
 
+#login-page, #new-user-page{
+  display: block;
+  margin: 10% auto;
+  width: max-content;
+  /* border: 1px solid black */
+}
+
+#login-page-form, #new-user-form{
+  display:flex;
+  flex-direction: column;
+}
+
+#new-user-form>*, #login-page-form>*{
+  margin: 0.3em;
+}
+
+.text-center{
+  text-align: center;
+}
