--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,7 @@
 :root{
-  --link-color: #3700ff
+  --link-color: #3700ff;
+  --blue-600: #0079c9;
+  --blue-100: #388ec7;
 }
 
 nav{
@@ -10,7 +12,7 @@ nav{
 }
 
 #nav-logo{
-  font-size: 2em;
+  font-size: 2.5em;
 }
 
 #nav-content{
@@ -24,10 +26,24 @@ nav{
 }
 
 .login-input{
-  width: 90px;
+  width: 150px;
+  /* put more styling */
 }
 
-#login-button, #register-user{
+.nav-input{
+  width: 120px;
+}
+
+#nav-login-link{
+  height: 1.8em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1px 6px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.button-1{
   color: white;
   background-color: var(--link-color);
   border: 1px solid gray;
@@ -41,35 +57,24 @@ a{
   color: var(--link-color)
 }
 
-#nav-login-link{
-  color: white;
-  background-color: var(--link-color);
-  border: 1px solid gray;
-  border-radius: 0.3em;
-  height: 1.8em;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 1px 6px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 @media (min-width:800px){
 
   #nav-login-link{
     display: none;
   }
+
 }
 
 @media (max-width:800px){
   #nav-login-form, #nav-new-user{
     display: none;
   }
+
 }
 
 #home{
   display: grid;
-  grid-template-columns: 150px 1fr;
+  grid-template-columns: 200px 1fr;
 }
 
 #side-bar{
@@ -78,26 +83,23 @@ a{
   box-sizing: border-box;
 }
 
-#login-page, #new-user-page{
+.form-container{
   display: block;
   margin: 10% auto;
   width: max-content;
-  /* font-size: 1.3em; */
-  /* border: 1px solid black */
 }
 
-#login-page-form, #new-user-form{
+.form-container>form{
   width: 375px;
   display:flex;
   flex-direction: column;
 }
 
-#new-user-form>*, #login-page-form>*{
+.form-container>form>*{
   margin: 0.3em;
 }
 
 .input-error{
   font-size: 0.7em;
   color: red;
-  /* display:none; */
 }
