--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -53,7 +53,8 @@ nav{
   border: 1px solid gray;
   border-radius: 0.3em;
   height: 2em;
-  width: max-content
+  width: max-content;
+  cursor: pointer
 }
 
 a{
