--- a/src/components/Messaging/Messages.css
+++ b/src/components/Messaging/Messages.css
@@ -67,7 +67,7 @@
   text-align: left;
 }
 .messages-table {
-  width: 100vw;
+  width: 100%;
   border-collapse: collapse;
 }
 .messages-table thead th {
