--- a/src/App.css
+++ b/src/App.css
@@ -40,4 +40,46 @@
 .read-the-docs {
   color: #888;
 }
-
+.navigation{
+  width: 100%;
+  height: 50px;
+  background-color:blue;
+}
+.navigation ul{
+  display:flex;
+  flex-wrap: wrap;
+  float: right;
+  margin: 20 0px;
+  padding: 0 25px;
+}
+.navigation ul link{
+  list-style-type: none;
+  padding-right: 10px;
+}
+.hamburger{
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  justify-content: space-around;
+  flex-flow: column nowrap;
+  z-index: 10;
+}
+.burger{
+  width: 2rem;
+  height: 0.25rem;
+  border-radius: 10px;
+  background-color: black;
+  transform-origin: 1px;
+  transition: all 0.3s linear;
+}
+.hamburger{
+  display: none;
+}
+@media (max-width: 767px){
+  .hamburger{
+    display:fixed;
+    padding-top: 10px;
+    margin-left: 10px;
+    z-index: 10;
+  }
+}
