--- a/src/App.css
+++ b/src/App.css
@@ -41,45 +41,46 @@
   color: #888;
 }
 .navigation{
+  margin:5px;
   width: 100%;
   height: 50px;
-  background-color:blue;
+  background-color:#abbabeaa;
 }
 .navigation ul{
   display:flex;
   flex-wrap: wrap;
-  float: right;
-  margin: 20 0px;
+  float: middle;
+  margin: 40 5px;
   padding: 0 25px;
 }
 .navigation ul link{
+  display:grid;
   list-style-type: none;
+  margin:2px;
   padding-right: 10px;
 }
 .hamburger{
-  width: 2rem;
+  width: 4rem;
   height: 2rem;
   display: flex;
-  justify-content: space-around;
-  flex-flow: column nowrap;
+  justify-content: space-between;
+ 
   z-index: 10;
 }
-.burger{
-  width: 2rem;
-  height: 0.25rem;
-  border-radius: 10px;
-  background-color: black;
-  transform-origin: 1px;
-  transition: all 0.3s linear;
-}
-.hamburger{
-  display: none;
-}
+
 @media (max-width: 767px){
   .hamburger{
-    display:fixed;
+    display:flex;
     padding-top: 10px;
     margin-left: 10px;
     z-index: 10;
   }
+}
+.elementor-menu-toggle:after{
+  content:'Menu';
+  position:relative;
+  margin-right: 10px;
+}
+.Link{
+  margin-right: 50px;
 }
